bau: Fix horizontal scrolling on mobile devices
The nowrap solution we put in to stop the radio buttons on the select
documents page caused labels to push the width of the document outside
the bound of the device.

This commit restricts the nowrap so that it only applies to
tablet-and-wider devices.

Pair: @richardtowers @oswaldquek

--- a/app/assets/stylesheets/_govuk-elements-overrides.scss
+++ b/app/assets/stylesheets/_govuk-elements-overrides.scss
@@ -163,11 +163,12 @@
   }
 }
 
-// Inline fieldsets
-.form-group .inline {
-  white-space: nowrap;
+@include media (tablet) {
+  .form-group .inline {
+    white-space: nowrap;
 
-  span {
-    white-space: normal;
+    span {
+      white-space: normal;
+    }
   }
 }
